--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "contact": {
-    "title": "Contact",
+    "title": "vruumvruum.contact",
     "mainStatement": "Let's build what's next.",
     "email": "hello@vruumvruum.com",
     "footer": "VRMVRM.25"
