--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,6 +1,6 @@
 {
   "contact": {
-    "title": "Contacto",
+    "title": "vruumvruum.contacto",
     "mainStatement": "Construyamos lo que sigue.",
     "email": "hola@vruumvruum.com",
     "footer": "VRMVRM.25"
