--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,7 +48,7 @@
   },
   "footer": {
     "brand": "vruumvruum",
-    "tagline": "Building digital experiences that move",
+    "tagline": "Building digital experiences that moves. Fast.",
     "about": "About",
     "pricing": "Pricing",
     "copyright": "© {year} vruumvruum. All rights reserved."
